Closed Bug 329524 Opened 20 years ago Closed 20 years ago

nsNavBookmarks::ReplaceItem() leaves the bookmark hash in an inconsistent state

Categories

(Firefox :: Bookmarks & History, defect, P1)

defect

Tracking

()

RESOLVED FIXED
Firefox 2 alpha1

People

(Reporter: mozilla, Assigned: brettw)

References

Details

(Keywords: fixed1.8.1)

Attachments

(1 file)

Using nsNavBookmarksService::ReplaceItem() to change the URI of a bookmark seems to cause problems with the bookmark hash. The symptoms are that in the UI, the changed bookmark will believe that it still represents the old URI (causing an error if you try to view its properties), and the following message will get printed to the console: ###!!! ASSERTION: Bookmark hash table out-of-sync with the database: 'realBookmarked == *aBookmarked', file /fb/mozilla/browser/components/places/src/nsNavBookmarks.cpp, line 1718 Break: at file /fb/mozilla/browser/components/places/src/nsNavBookmarks.cpp, line 1718
Priority: -- → P1
Target Milestone: --- → Firefox 2 alpha1
Attached patch PatchSplinter Review
Attachment #214228 - Flags: review?(joe)
Attachment #214228 - Flags: review?(joe) → review+
On trunk and branch.
Keywords: fixed1.8.1
Status: NEW → RESOLVED
Closed: 20 years ago
Resolution: --- → FIXED
Blocks: 329797
Bug 451915 - move Firefox/Places bugs to Firefox/Bookmarks and History. Remove all bugspam from this move by filtering for the string "places-to-b-and-h". In Thunderbird 3.0b, you do that as follows: Tools | Message Filters Make sure the correct account is selected. Click "New" Conditions: Body contains places-to-b-and-h Change the action to "Delete Message". Select "Manually Run" from the dropdown at the top. Click OK. Select the filter in the list, make sure "Inbox" is selected at the bottom, and click "Run Now". This should delete all the bugspam. You can then delete the filter. Gerv
Component: Places → Bookmarks & History
QA Contact: places → bookmarks
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: