Bug 329524 r=joe.hughes ReplaceItem bookmark call doesn't update cache.